kubernetes/overlays/eks-prd-01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apoia
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/group.name: pdpj-apoia
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: "access_logs.s3.enabled=true,access_logs.s3.bucket=cnj-logs-access,access_logs.s3.prefix=pdpj-apoia"
  labels:
    app: pdpj-apoia
    part-of: pdpj-apoia
spec:
  tls:
    - hosts:
        - apoia.pdpj.jus.br
  rules:
    - host: apoia.pdpj.jus.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apoia
                port:
                  name: http
